Fix student attendance reports to include absent records and exports